--- a/index.html
+++ b/index.html
@@ -97,46 +97,13 @@
 					<!-- portfolio_filter -->
 					
 					<!-- portfolio_container -->
-					<div class="no-padding portfolio_container clearfix" data-aos="fade-up">
-						<!-- single work -->
-						<div class="col-md-4 col-sm-6  fashion logo">
-							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="24.jpg" alt="image" class="img-responsive" />
-								<div class="portfolio_item_hover">
-									<div class="portfolio-border clearfix">
-										<div class="item_info"> <span>Mockups in seconds</span> <em></em> </div>
-									</div>
-								</div>
-							</a>
-						</div>
-						<!-- end single work -->
-						<!-- single work -->
-						<div class="col-md-4 col-sm-6  fashion logo">
-							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="23.jpg" alt="image" class="img-responsive" />
-								<div class="portfolio_item_hover">
-									<div class="portfolio-border clearfix">
-										<div class="item_info"> <span>Mockups in seconds</span> <em></em> </div>
-									</div>
-								</div>
-							</a>
-						</div>
-						<!-- end single work -->
-						<!-- single work -->
-						<div class="col-md-4 col-sm-6  fashion logo">
-							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="22.jpg" alt="image" class="img-responsive" />
-								<div class="portfolio_item_hover">
-									<div class="portfolio-border clearfix">
-										<div class="item_info"> <span>Mockups in seconds</span> <em></em> </div>
-									</div>
-								</div>
-							</a>
-						</div>
-						<!-- end single work -->
+					<div class="no-padding portfolio_container clearfix" data-aos="fade-up">						
 						<!-- single work -->
 						<div class="col-md-4 col-sm-6  fashion logo">
 							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="21.jpg" alt="image" class="img-responsive" />
 								<div class="portfolio_item_hover">
 									<div class="portfolio-border clearfix">
-										<div class="item_info"> <span>Mockups in seconds</span> <em></em> </div>
+										<div class="item_info"> <span>Orlando City Away 19/20</span> <em></em> </div>
 									</div>
 								</div>
 							</a>
@@ -147,7 +114,7 @@
 							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="20.jpg" alt="image" class="img-responsive" />
 								<div class="portfolio_item_hover">
 									<div class="portfolio-border clearfix">
-										<div class="item_info"> <span>Mockups in seconds</span> <em></em> </div>
+										<div class="item_info"> <span>Gremio 20/21</span> <em></em> </div>
 									</div>
 								</div>
 							</a>
@@ -158,7 +125,7 @@
 							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="19.jpg" alt="image" class="img-responsive" />
 								<div class="portfolio_item_hover">
 									<div class="portfolio-border clearfix">
-										<div class="item_info"> <span>Mockups in seconds</span> <em></em> </div>
+										<div class="item_info"> <span>2020-21 Wolves Away Shirt</span> <em></em> </div>
 									</div>
 								</div>
 							</a>
@@ -169,7 +136,7 @@
 							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="18.jpg" alt="image" class="img-responsive" />
 								<div class="portfolio_item_hover">
 									<div class="portfolio-border clearfix">
-										<div class="item_info"> <span>Mockups in seconds</span> <em></em> </div>
+										<div class="item_info"> <span>Tottenham 2019 Third</span> <em></em> </div>
 									</div>
 								</div>
 							</a>
@@ -180,7 +147,7 @@
 							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="17.jpg" alt="image" class="img-responsive" />
 								<div class="portfolio_item_hover">
 									<div class="portfolio-border clearfix">
-										<div class="item_info"> <span>Mockups in seconds</span> <em></em> </div>
+										<div class="item_info"> <span>Juventus Concept Edition 2021</span> <em></em> </div>
 									</div>
 								</div>
 							</a>
@@ -191,7 +158,7 @@
 							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="16.jpg" alt="image" class="img-responsive" />
 								<div class="portfolio_item_hover">
 									<div class="portfolio-border clearfix">
-										<div class="item_info"> <span>Mockups in seconds</span> <em></em> </div>
+										<div class="item_info"> <span>Jersey Template</span> <em></em> </div>
 									</div>
 								</div>
 							</a>
@@ -202,108 +169,117 @@
 							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="15.jpg" alt="image" class="img-responsive" />
 								<div class="portfolio_item_hover">
 									<div class="portfolio-border clearfix">
-										<div class="item_info"> <span>Mockups in seconds</span> <em></em> </div>
+										<div class="item_info"> <span>Barcelona Concept Edition 2021</span> <em></em> </div>
 									</div>
 								</div>
 							</a>
 						</div>
 						<!-- end single work -->
-												<!-- single work -->
+						<!-- single work -->
 						<div class="col-md-4 col-sm-6  fashion logo">
 							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="14.jpg" alt="image" class="img-responsive" />
 								<div class="portfolio_item_hover">
 									<div class="portfolio-border clearfix">
-										<div class="item_info"> <span>Mockups in seconds</span> <em></em> </div>
+										<div class="item_info"> <span>Borussia Dortmund  20/21</span> <em></em> </div>
 									</div>
 								</div>
 							</a>
 						</div>
-						<!-- end single work -->						<!-- single work -->
+						<!-- end single work -->						
+						<!-- single work -->
 						<div class="col-md-4 col-sm-6  fashion logo">
 							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="13.jpg" alt="image" class="img-responsive" />
 								<div class="portfolio_item_hover">
 									<div class="portfolio-border clearfix">
-										<div class="item_info"> <span>Mockups in seconds</span> <em></em> </div>
+										<div class="item_info"> <span>Real Madrid 2021 Fantasy</span> <em></em> </div>
 									</div>
 								</div>
 							</a>
 						</div>
-						<!-- end single work -->						<!-- single work -->
+						<!-- end single work -->						
+						<!-- single work -->
 						<div class="col-md-4 col-sm-6  fashion logo">
 							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="12.jpg" alt="image" class="img-responsive" />
 								<div class="portfolio_item_hover">
 									<div class="portfolio-border clearfix">
-										<div class="item_info"> <span>Mockups in seconds</span> <em></em> </div>
+										<div class="item_info"> <span>Argentina 2021 Campeones</span> <em></em> </div>
 									</div>
 								</div>
 							</a>
 						</div>
-						<!-- end single work -->						<!-- single work -->
+						<!-- end single work -->						
+						<!-- single work -->
 						<div class="col-md-4 col-sm-6  fashion logo">
 							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="11.jpg" alt="image" class="img-responsive" />
 								<div class="portfolio_item_hover">
 									<div class="portfolio-border clearfix">
-										<div class="item_info"> <span>Mockups in seconds</span> <em></em> </div>
+										<div class="item_info"> <span>Napoli 2019</span> <em></em> </div>
 									</div>
 								</div>
 							</a>
 						</div>
-						<!-- end single work -->						<!-- single work -->
+						<!-- end single work -->						
+						<!-- single work -->
 						<div class="col-md-4 col-sm-6  fashion logo">
 							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="10.jpg" alt="image" class="img-responsive" />
 								<div class="portfolio_item_hover">
 									<div class="portfolio-border clearfix">
-										<div class="item_info"> <span>Mockups in seconds</span> <em></em> </div>
+										<div class="item_info"> <span>Liverpool Suplente 20/21</span> <em></em> </div>
 									</div>
 								</div>
 							</a>
 						</div>
-						<!-- end single work -->						<!-- single work -->
+						<!-- end single work -->						
+						<!-- single work -->
 						<div class="col-md-4 col-sm-6  fashion logo">
 							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="09.jpg" alt="image" class="img-responsive" />
 								<div class="portfolio_item_hover">
 									<div class="portfolio-border clearfix">
-										<div class="item_info"> <span>Mockups in seconds</span> <em></em> </div>
+										<div class="item_info"> <span>20/21 Ac Milan Away Shirt</span> <em></em> </div>
 									</div>
 								</div>
 							</a>
 						</div>
-						<!-- end single work -->						<!-- single work -->
+						<!-- end single work -->						
+						<!-- single work -->
 						<div class="col-md-4 col-sm-6  fashion logo">
 							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="08.jpg" alt="image" class="img-responsive" />
 								<div class="portfolio_item_hover">
 									<div class="portfolio-border clearfix">
-										<div class="item_info"> <span>Mockups in seconds</span> <em></em> </div>
+										<div class="item_info"> <span>América 2021 Third</span> <em></em> </div>
 									</div>
 								</div>
 							</a>
 						</div>
-						<!-- end single work -->						<!-- single work -->
+						<!-- end single work -->						
+						<!-- single work -->
 						<div class="col-md-4 col-sm-6  fashion logo">
 							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="07.jpg" alt="image" class="img-responsive" />
 								<div class="portfolio_item_hover">
 									<div class="portfolio-border clearfix">
-										<div class="item_info"> <span>Mockups in seconds</span> <em></em> </div>
+										<div class="item_info"> <span>18/19 Senegal Jersey</span> <em></em> </div>
 									</div>
 								</div>
 							</a>
 						</div>
-						<!-- end single work -->						<!-- single work -->
+						<!-- end single work -->						
+						<!-- single work -->
 						<div class="col-md-4 col-sm-6  fashion logo">
 							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="06.jpg" alt="image" class="img-responsive" />
 								<div class="portfolio_item_hover">
 									<div class="portfolio-border clearfix">
-										<div class="item_info"> <span>Mockups in seconds</span> <em></em> </div>
+										<div class="item_info"> <span>Parma 98/99 Classic</span> <em></em> </div>
 									</div>
 								</div>
 							</a>
 						</div>
-						<!-- end single work -->						<!-- single work -->
+						<!-- end single work -->						
+						<!-- single work -->
 						<div class="col-md-4 col-sm-6  fashion logo">
 							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="05.jpg" alt="image" class="img-responsive" />
 								<div class="portfolio_item_hover">
 									<div class="portfolio-border clearfix">
-										<div class="item_info"> <span>Mockups in seconds</span> <em></em> </div>
+										<div class="item_info"> <span>Coventry City 19/20</span> <em></em> </div>
 									</div>
 								</div>
 							</a>
@@ -314,7 +290,7 @@
 							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="04.jpg" alt="image" class="img-responsive" />
 								<div class="portfolio_item_hover">
 									<div class="portfolio-border clearfix">
-										<div class="item_info"> <span>Mockups in seconds</span> <em></em> </div>
+										<div class="item_info"> <span>Italy Third Jersey 19/20</span> <em></em> </div>
 									</div>
 								</div>
 							</a>
@@ -325,7 +301,7 @@
 							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="03.jpg" alt="image" class="img-responsive" />
 								<div class="portfolio_item_hover">
 									<div class="portfolio-border clearfix">
-										<div class="item_info"> <span>Mockups in seconds</span> <em></em> </div>
+										<div class="item_info"> <span>PSG Jordan Jersey Cheap</span> <em></em> </div>
 									</div>
 								</div>
 							</a>
@@ -336,7 +312,7 @@
 							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="02.jpg" alt="image" class="img-responsive" />
 								<div class="portfolio_item_hover">
 									<div class="portfolio-border clearfix">
-										<div class="item_info"> <span>Mockups in seconds</span> <em></em> </div>
+										<div class="item_info"> <span>Galatasaray 18/19 Third Kit</span> <em></em> </div>
 									</div>
 								</div>
 							</a>
@@ -347,7 +323,7 @@
 							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="01.jpg" alt="image" class="img-responsive" />
 								<div class="portfolio_item_hover">
 									<div class="portfolio-border clearfix">
-										<div class="item_info"> <span>Mockups in seconds</span> <em></em> </div>
+										<div class="item_info"> <span>PSG Jordan Jersey Cheap</span> <em></em> </div>
 									</div>
 								</div>
 							</a>
